maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:19: error: expected class or object definition
def keepHandOnSideWall():Int=
^Escaper:63: error: Unmatched closing brace '}' ignored here
}
^